core/src/test/resources/configurations/invalid/instanceof-line-number.instances
instanceof a {

	# a comment

	name: server1;
